// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField Default 1`] = `
<div
  className="sc-iAyFgw SgyWC"
  disabled={false}
>
  <div
    className="sc-kEYyzF btdASU"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="sc-kkGfuU kDzdeU"
    >
      Username
    </span>
  </div>
  <div
    className="sc-bwzfXH bZlivr"
  >
    <input
      className="sc-hMqMXs gUWwGk"
      disabled={false}
      id={undefined}
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <div
      className="sc-bwzfXH eiolfU"
    />
  </div>
  <div
    className="sc-kEYyzF btdASU"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="sc-kkGfuU kDzdeU"
    >
      $
    </span>
  </div>
</div>
`;

exports[`Storyshots TextField With Currency formatting 1`] = `
Array [
  <div
    className="sc-iAyFgw SgyWC"
    disabled={false}
  >
    <div
      className="sc-kEYyzF btdASU"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="sc-kkGfuU kDzdeU"
      >
        $
      </span>
    </div>
    <div
      className="sc-bwzfXH bZlivr"
    >
      <input
        className="sc-hMqMXs gUWwGk"
        disabled={false}
        id={undefined}
        name="first name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="10.00"
      />
      <div
        className="sc-bwzfXH eiolfU"
      />
    </div>
  </div>,
  <div
    className="sc-bwzfXH enAvAo"
  >
    <p
      className="sc-bxivhb bfQmQc"
    >
      <span
        className="sc-htpNat dHjTEh"
      >
        <span
          className="sc-htpNat fyOzxh"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat dHjTEh"
        >
          The reported value of this field is: 10
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Feedback 1`] = `
Array [
  <div
    className="sc-iAyFgw SgyWC"
    disabled={false}
  >
    <div
      className="sc-kEYyzF btdASU"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="sc-kkGfuU kDzdeU"
      >
        Username
      </span>
    </div>
    <div
      className="sc-bwzfXH bZlivr"
    >
      <input
        className="sc-hMqMXs gUWwGk"
        disabled={false}
        id={undefined}
        name="firstname"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <div
        className="sc-bwzfXH eiolfU"
      />
    </div>
    <div
      className="sc-kEYyzF btdASU"
      disabled={false}
      onClick={[Function]}
    >
      <span
        className="sc-kkGfuU kDzdeU"
      >
        $
      </span>
    </div>
  </div>,
  <div
    className="sc-bwzfXH enAvAo"
  >
    <p
      className="sc-bxivhb gWsGB"
    >
      <span
        className="sc-htpNat dHjTEh"
      >
        <span
          className="sc-htpNat fyOzxh"
        >
          <span
            aria-hidden={true}
            className="sc-iwsKbI jSMqMr"
            dangerouslySetInnerHTML={
              Object {
                "__html": "test-file-stub",
              }
            }
            role="img"
          />
        </span>
        <span
          className="sc-htpNat dHjTEh"
        >
          This is a feedback message
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`Storyshots TextField With Number formatting 1`] = `
<div
  className="sc-iAyFgw SgyWC"
  disabled={false}
>
  <div
    className="sc-bwzfXH bZlivr"
  >
    <input
      className="sc-hMqMXs gUWwGk"
      disabled={false}
      id={undefined}
      name="min value"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="number"
      value="10"
    />
    <div
      className="sc-bwzfXH eiolfU"
    />
  </div>
</div>
`;
